--- a/HRD_123/WebContent/WEB-INF/web.xml
+++ b/HRD_123/WebContent/WEB-INF/web.xml
@@ -9,4 +9,19 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <filter>
+    <filter-name>loginFilter</filter-name>
+    <filter-class>org.study.filter.LoginFilter</filter-class>
+    <init-param>
+      <param-name>excluded</param-name>
+      <param-value>
+  			/,
+  			/index.jsp, /
+  		</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>loginFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
